--- a/Project2/Laba6.csproj
+++ b/Project2/Laba6.csproj
@@ -39,11 +39,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="Player\EPlayerColor.cs" />
+    <Compile Include="Player\EPlayerType.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="SquarePosition.cs" />
     <Compile Include="GameUI.cs" />
     <Compile Include="Checker.cs" />
     <Compile Include="Move.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
