The code of most classes has been edited. Reduced method sizes

--- a/Project2/Laba6.csproj
+++ b/Project2/Laba6.csproj
@@ -38,13 +38,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Checker\Checker.cs" />
+    <Compile Include="Checker\ECheckerType.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Player\EPlayerColor.cs" />
     <Compile Include="Player\EPlayerType.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="SquarePosition.cs" />
     <Compile Include="GameUI.cs" />
-    <Compile Include="Checker.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
